fixed the desktop project website alignment issues

--- a/css/media.css
+++ b/css/media.css
@@ -463,24 +463,24 @@
 
   .project-desktop a {
     margin: 0.5em 0.25em;
-    width: 280px;
-    height: 300px;
+    width: 200px;
+    height: 260px;
     text-decoration: none;
     color: black;
-    font-size: 1em;
+    font-size: 0.75em;
     text-align: center;
   }
 
   .project-box {
     border: 0.5px solid gray;
-    width: 280px;
-    height: 350px;
-    padding: 1px;
+    width: 150px;
+    height: 260px;
+    padding: 2px;
   }
 
   .project-image {
     width: 100%;
-    height: 300px;
+    height: 200px;
   }
 
   .project-box:hover {
