--- a/css/project.css
+++ b/css/project.css
@@ -103,56 +103,7 @@
   to {opacity: 1}
 }
 
-/* Desktop Projects Page --------------------------------------
-.project-desk {
-  height: 42em;
-}
 
-.project-col {
-  width: 100%;
-  height: 355px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 0.5em;
-}
-
-.project-desktop {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.project-desktop a {
-  margin: 0.5em 0.25em;
-  width: 280px;
-  height: 300px;
-  text-decoration: none;
-  color: black;
-  font-size: 1em;
-  text-align: center;
-}
-
-.project-box {
-  border: 0.5px solid gray;
-  width: 280px;
-  height: 350px;
-  padding: 1px;
-}
-
-.project-image {
-  width: 100%;
-  height: 300px;
-}
-
-.project-box:hover {
- border: 2px solid black;
-}
-
-.project-desktop a:hover {
-  transform: translateY(0.25em);
-} */
 
 
 
